# lpm

./: .anjuta_sym_db.db  configure.ac  package-lock.json
.anjuta/session/: anjuta.session  dock-layout.xml
build-lpm-Qt5-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  lpm  qtcsettings.cmake
build-lpm-Qt5-Debug/.cmake/api/v1/reply/: cache-v2-93fec1cf9ddf0f77613a.json  cmakeFiles-v1-e19edb8ecb4bee88ceaa.json  codemodel-v2-685e2c95b823f8a6fd6d.json  directory-.-Debug-1f2630ef92231e327529.json  index-2024-02-05T18-08-23-0256.json  target-lpm-Debug-4e4a40caaf224a22d935.json  target-lpm_autogen-Debug-4e015e628c6da75c4e47.json  target-lpm_autogen_timestamp_deps-Debug-509264748d8808f489b8.json
build-lpm-Qt5-Debug/lpm_autogen/: deps  moc_predefs.h
lpm/: CMakeLists.txt  desktop.cpp  headers.h  icecream.cpp  main.cpp  sibitcant.cpp  sibitcant.h
lpm/lpm/: package.json
src/: Makefile.am  main.cc
